--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ Backend/obj/Debug/net6.0/Backend.csproj.FileListAbsolute.txt
 Backend/obj/Debug/net6.0/Backend.dll
 /Backend/bin
 /Backend/bin
+.vs/GestionEvenements/DesignTimeBuild/.dtbcache.v2
+.vs/GestionEvenements/v17/.futdcache.v1
+.vs/GestionEvenements/v17/.suo
+.vs/ProjectEvaluation/gestionevenements.metadata.v2
+.vs/ProjectEvaluation/gestionevenements.projects.v2
