--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ Backend/obj/Debug/net6.0/Backend.dll
 .vs/GestionEvenements/v17/.suo
 .vs/ProjectEvaluation/gestionevenements.metadata.v2
 .vs/ProjectEvaluation/gestionevenements.projects.v2
+*.v2
+*.v1
+.vs/GestionEvenements/v17/.suo
+*.cache
