--- a/BackendTest/BackendTest.csproj
+++ b/BackendTest/BackendTest.csproj
@@ -14,14 +14,11 @@
     <PackageReference Include="Moq" Version="4.18.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Backend\Backend.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Evenements\DbContexts\" />
   </ItemGroup>
 
 </Project>
